@@ -43,12 +43,13 @@ public class RPCPlugin {
    * @param context the handshake rpc context
    */
   public void clientFinishConnect(RPCContext context) { }
-  
+
   /**
    * This method is invoked at the client before it issues the RPC call.
    * @param context the per-call rpc context (in/out parameter)
    */
   public void clientSendRequest(RPCContext context) { }
+ 
   
   /**
    * This method is invoked at the RPC server when the request is received,
@@ -58,17 +59,18 @@ public class RPCPlugin {
   public void serverReceiveRequest(RPCContext context) { }
   
   /**
-   * This method is invoked at the server after the call is executed,
-   * but before the response is returned to the client
+   * This method is invoked at the server before the response is executed,
+   * but before the response has been formulated
    * @param context the per-call rpc context (in/out parameter)
    */
   public void serverSendResponse(RPCContext context) { }
-    
+  
   /**
    * This method is invoked at the client after the call is executed,
    * and after the client receives the response
    * @param context the per-call rpc context
    */
   public void clientReceiveResponse(RPCContext context) { }
+
   
 }
